# abkit

./: LICENSE  LOCAL_RUN.md  README.md
abkit-app/: app.py  pyproject.toml
abkit-app/components/: __init__.py  issue_display.py  metric_table.py
abkit-app/pages/: 1_Setup.py  2_QA.py  3_Analysis.py  4_Memo.py
abkit-core/: pyproject.toml
abkit-core/src/abkit_core/: __init__.py  analysis.py  design.py  quality.py  schemas.py  variance.py
abkit-core/tests/: test_analysis.py  test_design.py  test_quality.py  test_schemas.py  test_variance.py
abkit-core/tests/fixtures/bonferroni_off/: assignments.csv  config.yaml
abkit-core/tests/fixtures/bonferroni_on/: config.yaml  metrics.csv
abkit-core/tests/fixtures/clean/: assignments.csv  config.yaml  metrics.csv
abkit-core/tests/fixtures/guardrail_ship/: assignments.csv  config.yaml  metrics.csv
abkit-core/tests/fixtures/srm/: assignments.csv  config.yaml  metrics.csv
abkit-core/tests/fixtures/weak_cuped/: assignments.csv  config.yaml  metrics.csv
abkit-skills/prelaunch-qa/: README.md
abkit-skills/results-memo/: README.md
abkit-skills/shared/: agent-setup.md  consuming-results.md
abkit-skills/spec-review/: README.md
abkit-templates/configs/: README.md  example_bonferroni_off.yaml  example_bonferroni_on.yaml  example_guardrail_directions.yaml  experiment_config.schema.json  experiment_config.template.yaml  result_payload.schema.json
abkit-templates/data/: README.md  assignments_template.csv  (+1 more)
kit_docs/: 00-guidelines.md  01-product.md  02-architecture.md  03-schemas.md  04-skills.md  05-acceptance.md
