[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "abkit-app"
version = "0.1.0"
description = "Streamlit workbench for the A/B Testing Productivity Kit"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.35",
    "pyyaml>=6.0",
    "pandas>=2.0",
    "abkit-core",
]

[tool.hatch.build.targets.wheel]
# abkit-app is a Streamlit app, not an importable package.
# List the app root so hatchling can resolve file selection
# and produce a valid (empty-packages) wheel for editable installs.
sources = ["."]
packages = ["app.py", "pages", "components"]
